--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-PyPDF2==3.0.1
-streamlit==1.23.1
-Flask==2.2.3
-openai==0.27.8
-requests==2.31.0
+pandas
+scikit-learn
+requests
+joblib
+python-dotenv
+spacy
+tiktoken
